# apricot

./: DockerFile  Dockerfile  README.md  apricot.py  install.sh  main.js
apricot_magic/: __init__.py  apricot.py  setup.py
apricot_magic/apricot/: __init__.py
apricot_magic/apricot_magic/: __init__.py
apricot_plugin/: apricot_plugin.yaml  main.css  main.js
apricot_plugin/templates/: __local_OSCAR.radl  __local_clues.radl  __local_clues2.radl  __local_compilers.radl  __local_git.radl  __local_nfs.radl  __local_onedata.radl  __local_openmpi.radl  __local_openports.radl  __local_slurm.radl  __local_sshkey.radl
examples/: README.md  simple-test.ipynb
examples/MRI/: PyWrapper.tar.xz  fitPerfusion.py  perfusion.ipynb
examples/reconstruction/: README.md  evaluateImage.cpp  reconstruction.ipynb  script.sh
examples/reconstruction/input/: getResults.sh
examples/reconstruction/input/reconstructor_code/: CMakeLists.txt  install.sh
examples/reconstruction/input/reconstructor_code/src/code/: input.cpp  main.cpp  projectors.cpp  reconstruction.cpp
examples/reconstruction/input/reconstructor_code/src/includes/: input.h  projectors.h  reconstruction.h
